[package]
name = "rocksdb-client"
version = "0.1.6"
edition = "2021"
authors = [ "mpw <x@mpw.sh>"]

[dependencies]
rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"]}
sha1 = "0.10.6"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
hex = "0.4.3"
thiserror = "1.0.61"
bytes = "1.6.0"
log = "0.4.22"

[dev-dependencies]
tempfile = "3.10.1"
pretty_assertions = "1"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
futures = "0.3"
num_cpus = "1.16"
