[package]
name = "rocksdb-client"
version = "0.1.68"
edition = "2021"
authors = [ "mpw <x@mpw.sh>"]

[dependencies]
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", features = ["multi-threaded-cf"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
thiserror = "1.0"
bytes = "1.10"
log = "0.4"
rmp-serde = "1.3"
jsonpath-rust = "1.0"

[dev-dependencies]
tempfile = "3.19.1"
pretty_assertions = "1"
tokio = { version = "1.44", features = ["full"] }
rand = "0.8"
futures = "0.3"
num_cpus = "1.16"
